trying to fix the overflow:hidden/visible problem but failed

--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@ body{
 }
 nav{
     font-size: 24px;
-    /*overflow:hidden;*/
+    overflow:visible;
     width:100%;
     padding:0px;
     background-color: #284B63;
